--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,8 @@
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+  margin: 15px;
+}
 
 
   /* Add a black background color to the top navigation */
