--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,20 @@
+.carousel-control-prev {
+  margin-left:25%;
+  margin-right:25%;
+
+}
+.carousel-control-next {
+  margin-left:25%;
+  margin-right:25%;
+
+}
+
 .carousel-inner img {
+  margin-top: 5%;
+  margin-left: 15%;
+  max-width: 70%;
   width: 100%;
   height: 100%;
-  margin: 15px;
 }
 
 
