--- a/docs/style.css
+++ b/docs/style.css
@@ -6,6 +6,13 @@
   margin-left:15%;
   margin-right:15%;
 }
+.carousel-caption {
+  position: relative;
+  padding-bottom:17%;
+  color: rebeccapurple;
+  text-align: inherit;
+
+}
 .carousel-inner img {
   margin-bottom: 0.5%;
   margin-left: 15%;
