--- a/docs/style.css
+++ b/docs/style.css
@@ -1,34 +1,56 @@
-img #vizimg {
-  max-height: 40%;
+img#logolink {
+  height: 3rem;
+  width: 3rem;
 }
 
-.carousel-control-prev {
-  margin-left:15%;
-  margin-right:15%;
+.btn-primary {
+  color: #fff;
+  background-color: #8400FF;
+  border-color: #8400FF;
 }
-.carousel-control-next {
-  margin-left:15%;
-  margin-right:15%;
-}
-.carousel-caption {
-  position: relative;
-  padding-bottom:17%;
-  color: rebeccapurple;
-  text-align: inherit;
 
+.btn-primary:hover{
+  color: #fff;
+  background-color: rgb(80, 0, 155);
+  border-color: rgb(80, 0, 155)F;
 }
-.carousel-inner img {
-  margin-bottom: 0.5%;
-  margin-left: 15%;
-  max-width: 70%;
-  width: 100%;
-  max-height: 60%;
-  height: 100%;
+
+div #bboxlight {
+  max-width: 90%;
+  border-radius: 1rem 1rem 1rem 1rem;
 }
+
+div #bboxdark {
+  max-width: 90%;
+  border-radius: 1rem 1rem 1rem 1rem;
+}
+
+img#index-bar {
+  padding-top: 10%;
+  padding-bottom: 10%;
+  max-width: 90%;
+  border-radius: 2rem 2rem 2rem 2rem;
+}
+
+
+img#index-t-scat-y {
+
+    max-width: 90%;
+    border-radius: 2rem 2rem 2rem 2rem;
+}
+
+img#index-t-scat-n {
+  max-width: 90%;
+  border-radius: 2rem 2rem 2rem 2rem;
+}
+
+
+
 
 .table{
   max-height: 40rem;
   overflow-y: auto;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 
