--- a/docs/style.css
+++ b/docs/style.css
@@ -2,6 +2,11 @@ a {
   color: #343a40;
 }
 
+a:hover{
+  color: #343a40;
+  text-decoration: none;
+}
+
 
 .page-item.active .page-link {
   background-color: rebeccapurple;
@@ -24,7 +29,7 @@ a {
     position: -webkit-sticky;
     position: sticky;
     top: 1.25rem;
-    height: calc(100vh - 1rem);
+    height: calc(100vh - 11rem);
     overflow-y: auto;
 }
 
