--- a/docs/style.css
+++ b/docs/style.css
@@ -1,16 +1,29 @@
 a {
   color: #343a40;
 }
+.dropdown-item.active{
+  background-color: rebeccapurple;
+  border-color:gray;
+  color: whitesmoke;
+}
 
 a:hover{
   color: #343a40;
   text-decoration: none;
 }
 
+.list-group-item.active{
+  background-color: rebeccapurple;
+  border-color:gray;
+  color: whitesmoke;
+}
+.list-group-item.active a{
+  color: whitesmoke;
+}
 
 .page-item.active .page-link {
   background-color: rebeccapurple;
-  border-color: rebeccapurple;
+  border-color: gray;
 }
 
 .page-link{
@@ -88,19 +101,33 @@ img#index-t-scat-n {
   border-radius: 2rem 2rem 2rem 2rem;
 }
 
-.studenttable{
-  height: calc(100vh - 20rem);
-}
-
-.table{
+table#studenttable{
   overflow-y: auto;
   -ms-overflow-style: -ms-autohiding-scrollbar;
+  height: calc(100vh - 20rem);
 }
-thead th {
+table#studenttable thead th {
   position: sticky;
   position: -webkit-sticky;
-  top: 1px;
+  top: 0px;
+  border-top: 0px;
+  border-bottom: 0px;
   z-index: 5;
   border: 0.5rem rebeccapurple
 }
+
+table#studenttable tbody td {
+  border-bottom: 0px;
+
+}
+
+.results tr[visible='false'],
+.no-result{
+  display:none;
+}
+
+.results tr[visible='true']{
+  display:table-row;
+}
+
 
